# nvesm2

./: .gitignore  LICENSE  README.md
pseudo_quantization/: README.md  llama3_run.sh  llama3_run_2.sh  llama3_run_3.sh  llama3_run_all.sh  monitor_resources.py  pyproject.toml  reasoning.sh  result.md  run_all_auto.sh  to_do.md
pseudo_quantization/ai_anal/: metric_comp_anal.md  metrics_comp_anal_cursor.md  moe_eval_plan.md  test_adding_log.md
pseudo_quantization/mxq/: entry.py
pseudo_quantization/mxq/evaluation/: inference.py  modeling_pangu_moe.py  patch.py  quant_method.py
pseudo_quantization/mxq/evaluation/tasks/: bfcl_v3.py  ifeval.py  livecodebench.py  livecodebench_v6.py  reasoning.py  supergpqa.py
pseudo_quantization/mxq/quantize/: KLdiv.py  README.md  exp.py  hif4_quant_func.py  kl_kur_comp_with_gaussian.py  kl_kur_comp_with_realweight.py  kurtosis.py  kurtosis_block.py  linear.py  nvesm2_quant_func.py  nvfp_ext_format.py  pre_quant.py  quant_func.py  quantizer.py  reminder.md
pseudo_quantization/mxq/quantize/awq/: aquantizer.py  auto_clip.py  auto_scale.py  inpu_anal.py  prequant.py  run_awq.py
pseudo_quantization/mxq/quantize/metrics_block/: kurtosis_summary.json
pseudo_quantization/mxq/utils/: dataload_utils.py  module.py
pseudo_quantization/tools/: pangu_direct_smoke.py
rtl_area_power/: README.md
rtl_area_power/scripts/: run_dc.tcl
rtl_area_power/sram_stats/: nvesm2_45nm_OBUF.cfg  nvesm2_45nm_OBUF.cfg.out  nvesm2_45nm_WBUF_IBUF.cfg  nvesm2_45nm_WBUF_IBUF.cfg.out  (+8 more)
simulator/: README.md  notes.md  requirements.txt  run_simulator.py
(+265 files in other folders)
